# digit-recogniser

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  pyproject.toml  train_mnist.py
backend/: Dockerfile  api.py  cnn.py  infer.py  pyproject.toml  train.py
backend/weights/: mnist_cnn.32.10.99.pt  mnist_cnn.32.5.98.pt
db/: init.sql
frontend/: Dockerfile  app.py  pyproject.toml  utils.py
models/: mnist_cnn.16.10.98.pth  mnist_cnn.16.20.99.pth  mnist_cnn_99.pth
scripts/: README.md  setup_docker.sh  setup_ufw.sh  setup_user.sh
src/: app.py  cnn.py  train.py  utils.py
